--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RishavRanjan786.github.io/E-Commerce/",
+  "homepage": "https://RishavRanjan786.github.io/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
